# laptop_selector

./: .env  Cargo.toml  webdriver.yaml
benches/: start_web_service.rs
migrations/: 20231002225334_create_cpu_table.sql  20231003120017_create_gpu_table.sql  20231003151829_create_laptop_table.sql
src/: lib.rs  main.rs
