[package]
name = "laptop_selector"
version = "0.1.0"
edition = "2021"

[dependencies]
axum = "0.6.20"
clap = { version = "4.4.18", features = ["derive"] }
config = "0.13.3"
fantoccini = "0.19.3"
futures = "0.3.28"
fuzzy-matcher = "0.3.7"
minijinja = { version = "1.0.8", features = ["builtins"] }
prettytable-rs = "0.10.0"
serde = { version = "1.0.188", features = ["derive"] }
serde_json = "1.0.108"
serde_urlencoded = "0.7.1"
sqlx = { version = "0.7.2", features = ["sqlite", "runtime-tokio-native-tls"] }
thiserror = "1.0.49"
tokio = { version = "1.32.0", features = ["macros", "rt-multi-thread"] }
url = { version = "2.4.1", features = ["serde"] }

[dev-dependencies]
criterion = { version = "0.3", features = ["async_tokio"] }

[[bench]]
name = "start_web_service"
harness = false
